--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,18 +3,13 @@ apply plugin: 'android-apt'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "24.0.0"
-
+    buildToolsVersion "23.0.1"
     defaultConfig {
-        applicationId "com.harry.test"
+        applicationId "com.harry"
         minSdkVersion 21
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
-        ndk {
-            moduleName "Test"          //生成的so名字
-            abiFilters "armeabi", "armeabi-v7a", "x86" //输出指定三种abi体系结构下的so库，目前可有可无。
-            }
     }
     buildTypes {
         release {
@@ -22,16 +17,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    lintOptions {
-        abortOnError false
-    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'io.reactivex:rxjava:1.1.9'
     compile 'io.reactivex:rxandroid:0.24.0'
     compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
@@ -40,5 +30,6 @@ dependencies {
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.jakewharton:butterknife:8.2.1'
     apt 'com.jakewharton:butterknife-compiler:8.2.1'
-
+    compile 'com.facebook.fresco:fresco:0.13.0'
+    compile 'com.android.support:recyclerview-v7:23.3.0'
 }
