--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
 <manifest package="com.harry"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.REORDER_TASKS"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -20,23 +20,9 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".view.TestActivity"/>
-        <activity android:name=".ndk.TestNDK"/>
-        <activity android:name=".layout.LayoutActivity"/>
         <activity android:name=".rxjava.RxJavaActivity"/>
-        <activity android:name=".service.ServiceActivity"/>
-        <activity android:name=".design.DesignActivity"/>
-        <activity android:name=".design.DesignInputActivity"/>
-        <activity android:name=".design.TablayoutActivity"/>
-
-        <activity android:name=".design.SlideActivity"
-                  android:theme="@style/AppBaseTheme"/>
-        <activity android:name=".design.CollapsingActivity"/>
         <activity android:name=".rxjava.retrofit.TopActivity"
-            android:screenOrientation="portrait"/>
-        <service
-            android:name=".service.MyService"
-            android:process=":remote"/>
+                  android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
