compile into module

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,34 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+BINTRAY_USER=harryxr
+BINTRAY_KEY=05e7ca1b9742268e0ecdc5d5822f67ec7693276f
+ART_VER=1.0.0
+ART_GROUP=cn.ieclipse.af
+ART_ARTIFACT=af-library
+ART_PKG=aar
+## Local maven repo url
+ART_LOCAL_URL=file:///e:/repo
+
+# project
+PRJ_NAME=com.harry.rv.rxretrofit
+PRJ_URL=https://github.com/HarryXR/RetrofitRxjavaDemo
+PRJ_DESC=A Rxjava + Retrofit2 Demo
+
+# MAVEN LICENSE
+LIC_NAME=The Apache Software License, Version 2.0
+LIC_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
+LIC_DESC=
+
+# MAVEN SCM
+SCM_URL=https://github.com/HarryXR/RetrofitRxjavaDemo
+SCM_REPO=https://github.com/HarryXR/RetrofitRxjavaDemo.git
+SCM_DEV=git@github.com:HarryXR/RetrofitRxjavaDemo.git
+SCM_TAG=
+
+# MAVEN DEV
+DEV_NAME=RetrofitRxjavaDemo
+DEV_ID=HarryXR
+DEV_EMAIL=1061763497@qq.com
+
+PKG_VER_DESC=
