--- a/rxretrofit/build.gradle
+++ b/rxretrofit/build.gradle
@@ -1,15 +1,17 @@
-apply plugin: 'com.android.application'
-apply plugin: 'android-apt'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "24.0.1"
+
     defaultConfig {
-        applicationId "com.harry"
         minSdkVersion 17
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
     buildTypes {
         release {
@@ -17,20 +19,19 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-}
 
+}
+apply from : './bintray.gradle'
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(":rxretrofit")
     compile 'com.android.support:appcompat-v7:23.4.0'
+    testCompile 'junit:junit:4.12'
     compile 'io.reactivex:rxjava:1.1.9'
     compile 'io.reactivex:rxandroid:0.24.0'
     compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0-beta4'
     compile 'com.google.code.gson:gson:2.6.2'
-    compile 'com.jakewharton:butterknife:8.2.1'
-    apt 'com.jakewharton:butterknife-compiler:8.2.1'
     compile 'com.facebook.fresco:fresco:0.13.0'
     compile 'com.android.support:recyclerview-v7:23.3.0'
 }
