--- a/gradle.properties
+++ b/gradle.properties
@@ -10,16 +10,21 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 org.gradle.jvmargs=-Xmx1536m
-
+#systemProp.http.proxyHost=127.0.0.1
+#systemProp.http.proxyPort=1080
+#
+#systemProp.https.proxyHost=127.0.0.1
+#systemProp.https.proxyPort=1080
+#
+systemProp.socksProxyHost=127.0.0.1
+systemProp.socksProxyPort=1080
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-BINTRAY_USER=harryxr
-BINTRAY_KEY=05e7ca1b9742268e0ecdc5d5822f67ec7693276f
 ART_VER=1.0.0
-ART_GROUP=cn.ieclipse.af
-ART_ARTIFACT=af-library
+ART_GROUP=com.harry
+ART_ARTIFACT=rxretrofit
 ART_PKG=aar
 ## Local maven repo url
 ART_LOCAL_URL=file:///e:/repo
@@ -27,7 +32,7 @@ ART_LOCAL_URL=file:///e:/repo
 # project
 PRJ_NAME=com.harry.rv.rxretrofit
 PRJ_URL=https://github.com/HarryXR/RetrofitRxjavaDemo
-PRJ_DESC=A Rxjava + Retrofit2 Demo
+PRJ_DESC=A http request demo which based on rxjava and retrofit2
 
 # MAVEN LICENSE
 LIC_NAME=The Apache Software License, Version 2.0
