--- a/rxretrofit/src/main/AndroidManifest.xml
+++ b/rxretrofit/src/main/AndroidManifest.xml
@@ -1,13 +1,14 @@
 <manifest package="com.harry.rv.rxretrofit"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+          xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <application
-        android:name=".MyApplication"
+        android:name=".RxApplication"
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        >
+        tools:replace="android:name">
 
     </application>
 
