--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity android:name=".rxjava.UploadActivity"
                   android:screenOrientation="portrait"/>
 
+        <activity android:name=".video.VideoActivity"/>
     </application>
 
 </manifest>
