--- a/gradle.properties
+++ b/gradle.properties
@@ -16,8 +16,8 @@ org.gradle.jvmargs=-Xmx1536m
 #systemProp.https.proxyHost=127.0.0.1
 #systemProp.https.proxyPort=1080
 #
-systemProp.socksProxyHost=127.0.0.1
-systemProp.socksProxyPort=1080
+#systemProp.socksProxyHost=127.0.0.1
+#systemProp.socksProxyPort=1080
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
