--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
@@ -31,6 +33,7 @@
                   android:screenOrientation="portrait"/>
 
         <activity android:name=".video.VideoActivity"/>
+        <activity android:name=".video.MovieRecorderActivity"/>
     </application>
 
 </manifest>
