add linear progress

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
 
         <activity android:name=".video.VideoActivity"/>
         <activity android:name=".video.MovieRecorderActivity"/>
+        <activity android:name=".progress.ProgressActivity"/>
     </application>
 
 </manifest>
