--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,21 @@
         <activity android:name=".ImmersiveActivity"/>
         <activity android:name=".SweepGradientActivity"/>
         <activity android:name=".progress.IndicatorActivity"/>
+        <activity android:name=".AcessActivity"/>
+        <service
+            android:name=".service.AccessService"
+            android:enabled="true"
+            android:exported="true"
+            android:label="@string/label"
+            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
+            <intent-filter>
+                <action android:name="android.accessibilityservice.AccessibilityService" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.accessibilityservice"
+                android:resource="@xml/accessibility_service_config" />
+        </service>
     </application>
 
 </manifest>
