--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
     defaultConfig {
-        applicationId "com.harry"
+        applicationId "com.harry.rx"
         minSdkVersion 19
         targetSdkVersion 23
         versionCode 1
