--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:screenOrientation="portrait"
         android:theme="@style/AppBaseTheme"
         tools:replace="android:name">
         <activity android:name=".MainActivity">
@@ -33,7 +34,8 @@
                   android:screenOrientation="portrait"/>
 
         <activity android:name=".video.VideoActivity"/>
-        <activity android:name=".video.MovieRecorderActivity"/>
+        <activity android:name=".video.MovieRecorderActivity"
+            android:screenOrientation="portrait"/>
         <activity android:name=".ProgressActivity"/>
         <activity android:name=".mvp.TopViewActivity"/>
         <activity android:name=".slide.ViewPagerActivity"/>
