--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,9 +28,12 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(":rxretrofit")
+    compile project(":aesrsa")
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.jakewharton:butterknife:8.2.1'
     apt 'com.jakewharton:butterknife-compiler:8.2.1'
     compile 'com.android.support:recyclerview-v7:23.3.0'
     compile 'fm.jiecao:jiecaovideoplayer:4.7.0'
+    compile 'com.google.dagger:dagger:2.9'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.9'
 }
