--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
           xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-feature android:name="android.hardware.camera"/>
+    <uses-feature android:name="android.hardware.camera.autofocus"/>
+
     <uses-permission android:name="android.permission.REORDER_TASKS"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
@@ -47,6 +50,7 @@
         <activity android:name=".SweepGradientActivity"/>
         <activity android:name=".progress.IndicatorActivity"/>
         <activity android:name=".AcessActivity"/>
+        <activity android:name=".AesRsaActivity"/>
         <service
             android:name=".service.AccessService"
             android:enabled="true"
