--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,33 +11,37 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
         android:screenOrientation="portrait"
+        android:supportsRtl="true"
         android:theme="@style/AppBaseTheme"
         tools:replace="android:name">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
                 <category android:name="android.intent.category.HOME"/>
-                <category android:name="android.intent.category.MONKEY" />
+                <category android:name="android.intent.category.MONKEY"/>
             </intent-filter>
         </activity>
 
         <activity android:name=".rxjava.RxJavaActivity"/>
-        <activity android:name=".rxjava.retrofit.TopActivity"
-                  android:screenOrientation="portrait"/>
-        <activity android:name=".rxjava.UploadActivity"
-                  android:screenOrientation="portrait"/>
+        <activity
+            android:name=".rxjava.retrofit.TopActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".rxjava.UploadActivity"
+            android:screenOrientation="portrait"/>
 
         <activity android:name=".video.VideoActivity"/>
-        <activity android:name=".video.MovieRecorderActivity"
+        <activity
+            android:name=".video.MovieRecorderActivity"
             android:screenOrientation="portrait"/>
         <activity android:name=".ProgressActivity"/>
         <activity android:name=".mvp.TopViewActivity"/>
@@ -51,6 +55,12 @@
         <activity android:name=".progress.IndicatorActivity"/>
         <activity android:name=".AcessActivity"/>
         <activity android:name=".AesRsaActivity"/>
+        <activity android:name=".socket.ClientActivity"/>
+
+        <service
+            android:name=".socket.ServerService"
+            android:enabled="true">
+        </service>
         <service
             android:name=".service.AccessService"
             android:enabled="true"
@@ -58,12 +68,12 @@
             android:label="@string/label"
             android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
             <intent-filter>
-                <action android:name="android.accessibilityservice.AccessibilityService" />
+                <action android:name="android.accessibilityservice.AccessibilityService"/>
             </intent-filter>
 
             <meta-data
                 android:name="android.accessibilityservice"
-                android:resource="@xml/accessibility_service_config" />
+                android:resource="@xml/accessibility_service_config"/>
         </service>
     </application>
 
