--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.3.0'
     compile 'fm.jiecao:jiecaovideoplayer:4.7.0'
     compile 'com.google.dagger:dagger:2.9'
+    compile 'com.lovedise:permissiongen:0.0.6'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.9'
 }
