--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,10 +56,18 @@
         <activity android:name=".AcessActivity"/>
         <activity android:name=".AesRsaActivity"/>
         <activity android:name=".socket.ClientActivity"/>
+        <activity android:name=".service.binder.BinderActivity"/>
 
         <service
             android:name=".socket.ServerService"
             android:enabled="true">
+        </service>
+        <service
+            android:name=".service.binder.BinderPoolService"
+            android:enabled="true">
+            <intent-filter>
+                <action android:name="com.harry.service.binder.BinderPoolService"/>
+            </intent-filter>
         </service>
         <service
             android:name=".service.AccessService"
