--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,5 +36,6 @@ dependencies {
     compile 'fm.jiecao:jiecaovideoplayer:4.7.0'
     compile 'com.google.dagger:dagger:2.9'
     compile 'com.lovedise:permissiongen:0.0.6'
+    compile 'com.jakewharton.rxbinding:rxbinding:0.4.0'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.9'
 }
