--- a/project.properties
+++ b/project.properties
@@ -51,3 +51,27 @@ DEV_ID=HarryXR
 DEV_EMAIL=1061763497@qq.com
 
 PKG_VER_DESC=
+
+
+PROJ_GROUP=com.harry
+PROJ_VERSION=1.0.0
+PROJ_NAME=com.harry.rv.rxretrofit
+PROJ_WEBSITEURL=https://github.com/HarryXR/RetrofitRxjavaDemo
+PROJ_ISSUETRACKERURL=
+PROJ_VCSURL=git@github.com:HarryXR/RetrofitRxjavaDemo.git
+PROJ_DESCRIPTION=A http request demo which based on rxjava and retrofit2
+PROJ_ARTIFACTID=rxretrofit
+
+DEVELOPER_ID=RetrofitRxjavaDemo
+DEVELOPER_NAME=HarryXR
+DEVELOPER_EMAIL=1061763497@qq.com
+
+project.name=com.harry.rv.rxretrofit
+project.groupId=com.harry
+project.artifactId=rxretrofit
+project.packaging=aar
+project.siteUrl=https://github.com/HarryXR/RetrofitRxjavaDemo
+project.gitUrl=git@github.com:HarryXR/RetrofitRxjavaDemo.git
+
+#javadoc
+javadoc.name=Sketch
