--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,9 +27,9 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(":rxretrofit")
+//    compile project(":rxretrofit")
     compile project(":aesrsa")
-    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:appcompat-v7:24.1.1'
     compile 'com.jakewharton:butterknife:8.2.1'
     apt 'com.jakewharton:butterknife-compiler:8.2.1'
     compile 'com.android.support:recyclerview-v7:23.3.0'
@@ -37,6 +37,6 @@ dependencies {
     compile 'com.google.dagger:dagger:2.9'
     compile 'com.lovedise:permissiongen:0.0.6'
     compile 'com.jakewharton.rxbinding:rxbinding:0.4.0'
-//    compile 'com.harry:rxretrofit:1.0.0'
+    compile 'com.harry:rxretrofit:1.0.0'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.9'
 }
