--- a/project.properties
+++ b/project.properties
@@ -46,7 +46,7 @@ SCM_DEV=git@github.com:HarryXR/RetrofitRxjavaDemo.git
 SCM_TAG=
 
 # MAVEN DEV
-DEV_NAME=RetrofitRxjavaDemo
+DEV_NAME=HarryXR
 DEV_ID=HarryXR
 DEV_EMAIL=1061763497@qq.com
 
@@ -68,10 +68,11 @@ DEVELOPER_EMAIL=1061763497@qq.com
 
 project.name=com.harry.rv.rxretrofit
 project.groupId=com.harry
+project.version=1.0.0
 project.artifactId=rxretrofit
 project.packaging=aar
 project.siteUrl=https://github.com/HarryXR/RetrofitRxjavaDemo
 project.gitUrl=git@github.com:HarryXR/RetrofitRxjavaDemo.git
 
 #javadoc
-javadoc.name=Sketch
+javadoc.name=rxretrofit
