--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
-//apply plugin: 'android-apt'//annotationProcessor
+apply plugin: 'android-apt'//annotationProcessor
+//apply plugin: 'com.jakewharton.butterknife'
 
 android {
     compileSdkVersion 25
@@ -10,10 +11,11 @@ android {
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
-        jackOptions {
-            enabled true
-        }
+//        jackOptions {
+//            enabled true
+//        }
     }
+//    android {compileOptions.encoding = "utf8"}
     buildTypes {
         release {
             minifyEnabled false
@@ -26,10 +28,10 @@ android {
         // but continue the build even when errors are found:
         abortOnError false
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
+//    compileOptions {
+//        sourceCompatibility JavaVersion.VERSION_1_8
+//        targetCompatibility JavaVersion.VERSION_1_8
+//    }
 }
 
 dependencies {
@@ -37,8 +39,8 @@ dependencies {
 //    compile project(":rxretrofit")
     compile project(":aesrsa")
     compile 'com.android.support:appcompat-v7:25.2.0'
-    compile 'com.jakewharton:butterknife:8.3.0'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.3.0'
+    compile 'com.jakewharton:butterknife:8.5.1'
+    apt 'com.jakewharton:butterknife-compiler:8.5.1'
     compile 'com.android.support:recyclerview-v7:25.2.0'
     compile 'fm.jiecao:jiecaovideoplayer:4.7.0'
     compile 'com.google.dagger:dagger:2.9'
